--- a/starter-code/french-onion-soup-starter-code/index.html
+++ b/starter-code/french-onion-soup-starter-code/index.html
@@ -13,14 +13,14 @@
 <body>
 
   <header>
-  <H1>French Onion Soup</h1>
+  <Font size=200>French Onion Soup</Font>
   </header>
 
   <section>
-     <h3>We have been trying French onion soup in restaurants for years and my family
+     <h2>We have been trying French onion soup in restaurants for years and my family
         and friends agree none can compare to my recipe for taste and simplicity of
-        preparation.</h3>
-        <img src = "images/cooking-info.png">
+        preparation.</h2>
+        <img src = "images/recipe-info.png">
         <hr>
   </section>
 
@@ -38,7 +38,7 @@
       <h5>2 slices Swiss cheese, diced</h5>
       <h5>1/4 cup grated Parmesan cheese</h5>
     
-      <img src = "images/recipe-info.png"></a>
+      <img src = "images/cooking-info.png"></a>
   <hr>
   </section>
 
@@ -57,27 +57,5 @@
 </section>
 
 </div> 
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
