--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -10,16 +10,16 @@
 <body>
 
 <header>
-  <Font size=60>Apple Pie</Font>
+  <Font size=1000>Apple Pie</Font>
 </header>
 
 <section>
-    <h3>
+    <h2>
         This was my grandmother's apple pie recipe. I have never seen another one
         quite like it. It will always be my favorite and has won me several first place
         prizes in local competitions. I hope it becomes one of your favorites as well!
-    </h3>
-    <img src = "images/cooking-info.png">
+    </h2>
+    <img src = "images/recipe-info.png">
     <hr>
 </section>
   
@@ -34,7 +34,7 @@
   <h3>-1/2 cup white sugar</h3>
   <h3>-1/2 cup packed brown sugar</h3>
 
-  <img src = "images/recipe-info.png"></a>
+  <img src = "images/cooking-info.png"></a>
   <hr>
   
 </section>
